@@ -1063,6 +1063,21 @@ operator|.
 name|doFingerprint
 operator|=
 name|doFingerprint
+operator|&&
+operator|!
+operator|(
+literal|"true"
+operator|.
+name|equals
+argument_list|(
+name|System
+operator|.
+name|getProperty
+argument_list|(
+literal|"solr.disableFingerprint"
+argument_list|)
+argument_list|)
+operator|)
 expr_stmt|;
 name|this
 operator|.
