@@ -1660,6 +1660,43 @@ literal|0
 index|]
 argument_list|)
 expr_stmt|;
+comment|// if we turn of fingerprinting, it should succeed
+name|System
+operator|.
+name|setProperty
+argument_list|(
+literal|"solr.disableFingerprint"
+argument_list|,
+literal|"true"
+argument_list|)
+expr_stmt|;
+try|try
+block|{
+name|assertSync
+argument_list|(
+name|client1
+argument_list|,
+name|numVersions
+argument_list|,
+literal|true
+argument_list|,
+name|shardsArr
+index|[
+literal|0
+index|]
+argument_list|)
+expr_stmt|;
+block|}
+finally|finally
+block|{
+name|System
+operator|.
+name|clearProperty
+argument_list|(
+literal|"solr.disableFingerprint"
+argument_list|)
+expr_stmt|;
+block|}
 comment|// lets add the missing document and verify that order doesn't matter
 name|add
 argument_list|(
